deployment-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp-notification-35
  labels:
    app: kuber-dp-notification-35
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1 # шаг изменения по 1ому. Один гасится, один запускается
      maxUnavailable: 1 # мах число Подов недоступных, при обновлении
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: kuber-notification-35
          image: alxinsh/docker-java-hw35-notification:1.0.3
          ports:
            - containerPort: 8083
          resources:
            limits:
              cpu: 0.5
              memory: 2000Mi
