deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp-30
  labels:
    app: kuber-dp-30
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1 # шаг изменения по 1ому. Один гасится, один запускается
      maxUnavailable: 1 # мах число Подов недоступных, при обновлении
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: kuber-delivery-30
          image: alxinsh/docker-java-hw30-delivery:1.0.5
          ports:
            - containerPort: 8084
          resources:
            limits:
              cpu: 0.5
              memory: 2000Mi

        - name: kuber-warehouse-30
          image: alxinsh/docker-java-hw30-warehouse:1.0.5
          ports:
            - containerPort: 8083
          resources:
            limits:
              cpu: 0.5
              memory: 2000Mi

        - name: kuber-payment-30
          image: alxinsh/docker-java-hw30-payment:1.0.5
          ports:
            - containerPort: 8082
          resources:
            limits:
              cpu: 0.5
              memory: 2000Mi

        - name: kuber-order-30
          image: alxinsh/docker-java-hw30-order:1.0.6
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: 0.5
              memory: 2000Mi
