service_default_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-30
spec:
  selector:
    env: prod	# не связан с Deployment. Относится к Pod-ам с таким Selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
#  type: LoadBalancer
