service_default_clusterip_billing.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-billing-35
spec:
  selector:
    env: prod	# не связан с Deployment. Относится к Pod-ам с таким Selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
#  type: LoadBalancer
