service_default_clusterip_notification.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-notification-35
spec:
  selector:
    env: prod	# не связан с Deployment. Относится к Pod-ам с таким Selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
#  type: LoadBalancer
