ingress-hw10.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress-30
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: kuber-service-30
            port:
              number: 80
